# finn

./: CMakeLists.txt
src/: cal_err.f90  fundamental.f90  gen_poly.f90  main.f90  modules.F90  rey_molecule.f90  sym_poly.f90  write_poly.f90
